# CMakeList.txt : CMake project for Nordic_button, include source and define
# project specific logic here.
#
cmake_minimum_required (VERSION 3.8)

project ("Nordic_button")

# Add source to this project's executable.
add_executable (Nordic_button "main.cpp" "main.h")

# TODO: Add tests and install targets if needed.
